debug random issues that keep cropping up
have decided I need to use useReducer to handle complex state changes as having a race effect on my renders sometimes

--- a/src/App.css
+++ b/src/App.css
@@ -228,7 +228,7 @@ main {
   margin: auto;
 }
 
-.generate-save-button-container {
+.save-button-container {
   margin: auto 0;
 }
 
